<resources>

    <string name="app_name">Fitness Gym</string>
    <string name="web_client_id">519187967548-sdoin7msq1oleova34t4cqqpg6018dj1.apps.googleusercontent.com</string>

    <!--     Introduction buttons     !-->
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>


    <string name="msg_sign_in">No tienes cuenta?\n¡Únete a GymPartner!</string>
    <string name="m_s_fitness_que_nunca">¡Más fitness que nunca!</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirma contraseña</string>
    <string name="full_name">Nombre completo</string>
    <string name="forgot_password">Olvidaste la contraseña</string>
    <string name="login_with">Inicie con</string>
    <string name="wrong_email">Estructura de email no valida</string>
    <string name="wrong_password">Contraseña minimo de 6 caracteres</string>
    <string name="google">Google</string>
    <string name="join_gympartner">¡Únete a GymPartner!</string>
    <string name="every_day_more_strong">Cada dia más fuerte</string>

    <!--     Dialog error Login      !-->
    <string name="accept_login">Aceptar</string>
    <string name="title_login">¡Ups!</string>
    <string name="supporting_text_login">Verifica los datos y vuelve a intentarlo :)</string>

    <!--     Dialog error SignIn      !-->
    <string name="accept_sign_in">Aceptar</string>
    <string name="title_sign_in">¡Ups!</string>
    <string name="supporting_text_sign_in">Este correo ya esta registrado</string>

    <!--     Dialog error google Login      !-->
    <string name="accept_login_google">Aceptar</string>
    <string name="title_login_google">¡Ups!, Error inesperado</string>
    <string name="supporting_text_login_google">Vuelve a intentarlo y verifica tu conexion a internet</string>

    <!--     Top app bar options    !-->
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">cerrar sesion</string>

    <!--     Image Carousel    !-->
    <string name="imagen">imagen</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>

    <!--     Dialog Close Session      !-->
    <string name="accept_close_session">Aceptar</string>
    <string name="title_close_session">Cerrar sesion</string>
    <string name="supporting_text_close_session">¿Estas seguro de cerrar sesion?</string>

    <!--     Default dialog error      !-->
    <string name="accept_default_error">Aceptar</string>
    <string name="title_default_error">¡Ups, Error!</string>
    <string name="supporting_text_default_error">Ha ocurrido un error inesperado</string>
    <string name="name_lastname">Nombres y apellidos</string>
    <string name="gender">Genero</string>
    <string name="men">Hombre</string>
    <string name="women">Mujer</string>
    <string name="pick_birth_day">Selecciona el dia de tu nacimiento</string>
    <string name="peso_en_kg">Peso (en Kg)</string>
    <string name="size_meters">Estatura (en m)</string>
    <string name="save">Guardar</string>
    <string name="profile_img">profile img</string>
    <string name="ejercice_img">ejercice img</string>
    <string name="birth_day_picker">Seleccione la fecha de su nacimiento</string>


</resources>