<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                android:contentDescription="@string/profile_img"
                android:src="@drawable/user" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_and_last_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_lastname"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/gender"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_and_last_name_text_input_layout" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_men"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_and_last_name_text_input_layout">

            <RadioButton
                android:id="@+id/radio_button_men"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"
                android:text="@string/men" />

            <RadioButton
                android:id="@+id/radio_button_women"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"
                android:text="@string/women" />
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/date_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/pick_birth_day"
            android:textColor="@color/black"
            app:icon="@drawable/calendar"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/peso_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/peso_en_kg"
            android:padding="16dp"
            app:layout_constraintEnd_toStartOf="@id/size_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_picker_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/size_meters"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/peso_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/date_picker_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>